Fixes loading spinner alignment

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -189,6 +189,13 @@
 }
 
 .wp-block-navigation-placeholder {
+
+	.components-spinner {
+		margin-top: -4px;
+		margin-left: 4px;
+		vertical-align: middle;
+		margin-right: 7px;
+	}
 	.components-custom-select-control__button {
 		height: auto; // overide default button styles
 		margin-bottom: 0; // cancel bottom margin
